# cpp_template_project

./: CMakeLists.txt  LICENCSE.md  README.md  a.out  main.cpp  references.txt
src/: main.cpp
src/multiply/: CMakeLists.txt  multiply.cpp
src/multiply/include/multiply/: multiply.h
tests/: AlexTest.h  CMakeLists.txt  multiply_test.cpp
tools/: Color.h
