cmake_minimum_required(VERSION 3.22)
project(cpp_template_project)
set(CMAKE_CXX_FLAGS "--coverage -fprofile-use")
set(ROOT_PROJECT ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${ROOT_PROJECT}/bin)
set(CMAKE_PDB_OUTPUT_DIRECTORY ${ROOT_PROJECT}/bin)
message("ROOT_PROJECT: ${ROOT_PROJECT}")
enable_testing()
add_subdirectory(tests)
add_subdirectory(src)
add_executable(cpp_template_project src/main.cpp)